# crovia-seal

./: .gitattributes  .gitignore  ADOPT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  VERIFICATION.md  docker-compose.yml
.github/workflows/: conformance.yml  release.yml
conformance/: MILESTONES.md  README.md  generate_cim_vectors.py  generate_vectors.py  generate_vectors_extended.py  run_conformance.py
conformance/vectors/v1/: canonical_cases.json  issuer.id.txt  issuer.public.hex  seal_001_genesis.json  seal_001_genesis.payload.hex  seal_001_genesis.signature.hex  seal_002_chained.json  seal_002_chained.payload.hex  seal_002_chained.signature.hex  seal_003_image.json  seal_003_image.payload.hex  seal_003_image.signature.hex  seal_004_audio.json  seal_004_audio.payload.hex  seal_004_audio.signature.hex  seal_005_multimodal.json  seal_005_multimodal.payload.hex  seal_005_multimodal.signature.hex  seal_006_with_checks.json  seal_006_with_checks.payload.hex  seal_006_with_checks.signature.hex  seal_007_with_anchor.json  seal_007_with_anchor.payload.hex  seal_007_with_anchor.signature.hex  seal_008_empty_params.json  seal_008_empty_params.payload.hex  seal_008_empty_params.signature.hex  seal_009_long_chain.json  seal_009_long_chain.payload.hex  seal_009_long_chain.signature.hex  seal_010_utf8_content.json  seal_010_utf8_content.payload.hex  seal_010_utf8_content.signature.hex
conformance/vectors/v1/invalid/: index.json  invalid_01_bad_signature.json  invalid_01_bad_signature.note.md  invalid_02_wrong_domain.json  invalid_02_wrong_domain.note.md  invalid_03_tampered_field.json  invalid_03_tampered_field.note.md  invalid_04_bad_seal_version.json  invalid_04_bad_seal_version.note.md  invalid_05_unknown_toplevel.json  invalid_05_unknown_toplevel.note.md
docs/: THREAT_MODEL.md
integrations/browser-extension/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
integrations/browser-extension/src/: background.ts
integrations/browser-extension/src/content/: chatgpt.ts  detector-base.ts  hosts.ts  index.ts  passive-detector.ts
integrations/browser-extension/src/lib/: issuer.ts  messaging.ts  stego.ts  storage.ts
integrations/browser-extension/src/popup/: popup.css  popup.html  popup.ts
integrations/browser-extension/src/verify/: verify.css  verify.html  verify.ts
integrations/browser-extension/tests/: stego.conformance.test.ts  stego.test.ts
integrations/proxy/: Dockerfile  README.md  pyproject.toml
integrations/proxy/crovia_proxy/: __init__.py  __main__.py  config.py  sealer.py  server.py  vendors.py
integrations/proxy/tests/: conftest.py  test_beacon_integration.py  test_sealer.py  test_server.py  test_server_native.py  test_vendors.py
integrations/seal-svc/: app.py
integrations/tlog/: Dockerfile  pyproject.toml
integrations/tlog/crovia_tlog/: __init__.py  __main__.py  client.py  config.py  keys.py  merkle.py  server.py  sth.py  storage.py
integrations/tlog/tests/: conftest.py  test_client.py  test_merkle.py  test_server.py  test_storage.py
ops/: README.md  disk_guard.sh  smoke_public.sh
reference/python/: README.md  pyproject.toml
reference/python/crovia_seal/: __init__.py  beacon.py  canonical.py  constants.py  errors.py  keys.py  seal.py  stego.py
reference/python/examples/: demo_hp.py
reference/python/tests/: test_beacon.py  test_canonical.py  test_seal.py  test_stego.py  test_tamper.py
reference/typescript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
reference/typescript/examples/: demo.ts
reference/typescript/src/: canonical.ts  constants.ts  errors.ts  index.ts  keys.ts  seal.ts
reference/typescript/src/util/: base32.ts  hash.ts  hex.ts  random.ts  random.ts.new
reference/typescript/tests/: canonical.test.ts  conformance.test.ts  seal.test.ts  tamper.test.ts
sdk/javascript/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
sdk/javascript/examples/: basic.ts  register-live.mjs
sdk/javascript/src/: _polyfill.ts  canonical.ts  cli.ts  index.ts  keys.ts  register.ts  seal.ts  types.ts  verify.ts
sdk/javascript/test/: _python_byte_identity_check.py  canonical.test.ts  cross-language.test.ts  interop.test.ts  seal.test.ts
sdk/python/: .gitignore  README.md  pyproject.toml  setup.py
sdk/python/crovia_seal/: __init__.py  cli.py  verify.py
sdk/python/examples/: register_live.py
sdk/python/src/crovia_seal/: __init__.py  canonical.py  keys.py  register.py  seal.py  verify.py
sdk/python/tests/: test_canonical.py  test_interop.py  test_seal.py
standards/: README.md  draft-crovia-seal-00.html  draft-crovia-seal-00.txt  draft-crovia-seal-00.xml  draft-crovia-seal-01.html  draft-crovia-seal-01.txt  draft-crovia-seal-01.xml
