[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crovia-proxy"
version = "0.5.0"
description = "OpenAI-compatible proxy that automatically seals every response with a Crovia Seal v1 provenance receipt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "CROVIA Research" }]
dependencies = [
    "crovia-seal",
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
crovia-proxy = "crovia_proxy.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crovia_proxy*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
