[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crovia-tlog"
version = "0.5.0"
description = "Crovia Transparency Log - append-only Merkle log for Crovia Seal provenance receipts, RFC 6962 style."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "CROVIA Research" }]
dependencies = [
    "crovia-seal",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
crovia-tlog = "crovia_tlog.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crovia_tlog*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
