[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crovia-seal"
version = "0.5.0"
description = "Reference implementation of Crovia Seal v1 - tamper-evident provenance receipts for AI outputs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "CROVIA Research" }]
keywords = ["ai", "provenance", "ed25519", "cryptography", "transparency", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://seal.croviatrust.com"
Specification = "https://github.com/croviatrust/crovia-seal/blob/main/SPEC.md"
Issues = "https://github.com/croviatrust/crovia-seal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["crovia_seal*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q --strict-markers"
